# anon-pii

./: .gitignore  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROXY-MODE.md  README.md  SECURITY.md  TIL.md  cliff.toml  deny.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: validator-reviewer.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_report.md
.github/workflows/: bench.yml  ci.yml  release.yml
demo/: README.md  hero.cast  hero.tape  record.sh
demo/samples/: incident-log.txt  passengers.csv  queries.sql  support-ticket.txt
docs/: api.md  comparison-redact.md  dependency-policy.md  entities.md  image-redaction.md  index.html  ner.md  openapi.json  openapi.yaml  pdf-redaction.md  proxy.md  quality.md  release.md  threat-model.md  xlsx.md  youtrack.md
docs/plans/: 2026-02-26-auto-readme-design.md  2026-02-26-auto-readme-plan.md
docs/playground/pkg/: anon_pii.js  anon_pii_bg.wasm
examples/: benchmark.rs  quality_report.rs  update_readme.rs
examples/support/: quality.rs
scripts/: build-wasm.sh  build_names.py  compare-quality.py  install-hooks.sh  release-preflight.sh  yt
src/: cli.rs  config.rs  csv.rs  detection.rs  encoding.rs  format.rs  lib.rs  main.rs  mapping.rs  patterns.rs  wasm.rs
src/anon/: __init__.py  __main__.py  cli.py
src/anon/core/: __init__.py  analyzer.py  anonymizer.py  mapping.py
src/anon/formats/: __init__.py  detector.py  json_handler.py  text_handler.py
src/anon/recognizers/: __init__.py  aviation.py  french.py
src/api/: handlers.rs  mod.rs  operators.rs  types.rs
src/detection/: context.rs  engine.rs  mod.rs  names.rs  normalize.rs  operators.rs  types.rs
src/detection/tests/: au.rs  aviation.rs  batch.rs  config.rs  context.rs  crypto.rs  csv.rs  date.rs  email.rs  es.rs  fi.rs  french.rs  iban.rs  in_.rs  integration.rs  ip.rs  it.rs  json.rs  kr.rs  mac.rs  mod.rs  multiline.rs  names.rs  normalization.rs  operators.rs  phone.rs  pl.rs  secrets.rs  sg.rs  si.rs  sql.rs  th.rs  uk.rs  url.rs  us.rs
src/image_redact/: mod.rs  ocr.rs  redact.rs  region.rs
src/image_redact/tests/: integration.rs  mod.rs  ocr.rs  redact.rs  region.rs
src/ner/: download.rs  heuristic.rs  ml.rs  mod.rs  names_insee.rs
src/patterns/: au.rs  aviation.rs  es.rs  fi.rs  french.rs  global.rs  in_.rs  it.rs  kr.rs  mod.rs  pl.rs  secrets.rs  sg.rs  si.rs  th.rs  uk.rs  us.rs  validators.rs
src/pdf_redact/: extract.rs  mod.rs  redact.rs  region.rs
src/proxy/: anthropic.rs  generic.rs  handler.rs  mod.rs  openai.rs  sse.rs
src/ui/: index.html  mod.rs
src/xlsx/: detect.rs  mod.rs
testdata/: api-error.json  crew-roster.csv  custom-recognizers.yaml  debug-log.txt  queries.sql
testdata/quality/: comparison-redact-v1-report.json  comparison-redact-v1.json  v1-baseline.json  v1.json  workflows-v1.json
tests/: cli_mapping_persistence.rs  docs_public.rs  proxy_security.rs  quality_corpus.rs  quality_workflows.rs  release_preflight.rs  restore_cli.rs  run_cli.rs  xlsx_scaffold.rs
tickets/: 00-gap-analysis.md  01-compact-pii-patterns.md  02-sql-csv-format-detection.md  04-language-cli-flag.md  05-entity-naming-conventions.md  06-us-aircraft-regex.md  07-default-threshold.md  08-include-mapping-placement.md  09-context-score-boosting.md  10-aircraft-context-all-patterns.md  11-person-entity-nlp.md  12-restore-command-interface.md  13-presidio-builtin-entities.md  14-crew-code-blocklist-expansion.md  15-unicode-escaped-pii.md  16-url-encoded-pii.md  17-jwt-bearer-token-detection.md  18-url-params-pii-extraction.md  19-multiline-pii-detection.md  20-outbound-pii-gate.md  21-mcp-tool-schema.md  22-two-phase-approval-ux.md  23-project-scope-allowlist.md  24-prompt-injection-sanitization.md  25-token-storage-keychain.md  26-cross-issue-pii-boundary.md  27-audit-logging.md  28-rate-limiting.md  29-youtrack-webhook-leak-risk.md  30-batched-ner-inference.md  31-onnx-runtime-optimizations.md  32-insee-name-dictionary.md  33-finetune-distilcamembert-ner.md  34-feature-flag-cleanup.md  35-titlecase-lastname-span-extension.md  36-accent-insensitive-name-consistency.md  37-last-name-consistency-pass.md  38-signoff-name-detection.md  39-full-presidio-parity.md  youtrack-anon-mcp-spec.md
