[package]
name = "anon"
version = "0.1.0"
edition = "2021"
description = "Fast CLI tool to anonymize PII in debug data"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
dirs = "6"
unicode-normalization = "0.1"
getrandom = "0.3"
aho-corasick = "1"

# Proxy mode dependencies — behind "proxy" feature, pinned for supply chain safety
tokio = { version = "=1.49.0", features = ["full"], optional = true }
axum = { version = "=0.8.8", optional = true }
reqwest = { version = "=0.12.28", default-features = false, features = ["rustls-tls", "stream"], optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

# NER (ML-based) — behind "ner" feature
ort = { version = "=2.0.0-rc.11", features = ["load-dynamic"], optional = true }
tokenizers = { version = "=0.22.2", optional = true, default-features = false, features = ["fancy-regex"] }
ndarray = { version = "0.17", optional = true }
ureq = { version = "3", optional = true }
sha2 = "0.10"
md5 = "0.7"

[features]
default = []
proxy = ["dep:tokio", "dep:axum", "dep:reqwest", "dep:futures", "dep:bytes"]
ner = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:ureq", "ner-lite"]
ner-lite = []

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
