[package]
name = "anon"
version = "0.1.0"
edition = "2021"
description = "Fast CLI tool to anonymize PII in debug data"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
colored = "3"
dirs = "6"
unicode-normalization = "0.1"
getrandom = "0.4"
aho-corasick = "1"

# Proxy mode dependencies — behind "proxy" feature, pinned for supply chain safety
tokio = { version = "=1.52.1", features = ["full"], optional = true }
axum = { version = "=0.8.9", optional = true }
reqwest = { version = "=0.12.28", default-features = false, features = ["rustls-tls", "stream"], optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

# Image anonymization — behind "image" feature, pinned for supply chain safety
image_crate = { package = "image", version = "=0.25.6", optional = true, default-features = false, features = ["png", "jpeg"] }
leptess = { version = "=0.14.0", optional = true }

# PDF text extraction and redaction — behind "pdf" feature, pinned for supply chain safety
lopdf = { version = "=0.40.0", optional = true }

# XLSX spreadsheet parsing — behind "xlsx" feature, pinned for supply chain safety
calamine = { version = "=0.34.0", optional = true }

# NER (ML-based) — behind "ner" feature
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic"], optional = true }
tokenizers = { version = "=0.22.2", optional = true, default-features = false, features = ["fancy-regex"] }
ndarray = { version = "0.17", optional = true }
ureq = { version = "3", optional = true }
sha2 = "0.11.0"
md5 = "0.8"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }

[features]
default = []
proxy = ["dep:tokio", "dep:axum", "dep:reqwest", "dep:futures", "dep:bytes"]
ner = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:ureq", "ner-lite"]
ner-lite = []
image = ["dep:image_crate", "dep:leptess"]
pdf = ["dep:lopdf"]
xlsx = ["dep:calamine"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
tempfile = "3"
