[package]
name = "anon-pii"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "Local reversible PII roundtrips for AI-assisted debugging"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tcheuD/anon-pii"
homepage = "https://github.com/tcheuD/anon-pii"
documentation = "https://docs.rs/anon-pii"
keywords = ["pii", "anonymization", "privacy", "redaction", "cli"]
categories = ["command-line-utilities", "text-processing"]
# Strict allowlist: anything not listed here is excluded from `cargo package`.
# Keep negated patterns after the paths they carve out.
include = [
    "/src/**",
    "/tests/**",
    "/testdata/**",
    "/examples/**",
    "/docs/**",
    "!/docs/plans/**",
    "/README.md",
    "/PROXY-MODE.md",
    "/LICENSE",
    "/SECURITY.md",
    "/CONTRIBUTING.md",
]

[lints.clippy]
# Clippy 1.93 promoted this style-only lint after the 1.88 MSRV baseline.
# Keep CI focused on behavioral warnings without rewriting established control flow.
collapsible_if = "allow"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "anon-pii"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
colored = "3"
dirs = "6"
unicode-normalization = "0.1"
unicode-segmentation = "1"
getrandom = "0.4"
aho-corasick = "1"

# Proxy mode dependencies — behind "proxy" feature, pinned for supply chain safety
tokio = { version = "=1.53.1", features = ["full"], optional = true }
axum = { version = "=0.8.9", optional = true }
reqwest = { version = "=0.12.28", default-features = false, features = ["rustls-tls", "stream"], optional = true }
futures = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

# Image anonymization — behind "image" feature, pinned for supply chain safety
image_crate = { package = "image", version = "=0.25.6", optional = true, default-features = false, features = ["png", "jpeg"] }
leptess = { version = "=0.14.0", optional = true }

# PDF text extraction and redaction — behind "pdf" feature, pinned for supply chain safety
lopdf = { version = "=0.44.0", optional = true }

# XLSX spreadsheet parsing — behind "xlsx" feature, pinned for supply chain safety
calamine = { version = "=0.36.0", optional = true }

# NER (ML-based) — behind "ner" feature
ort = { version = "=2.0.0-rc.12", features = ["load-dynamic"], optional = true }
tokenizers = { version = "=0.23.1", optional = true, default-features = false, features = ["fancy-regex"] }
ndarray = { version = "0.17", optional = true }
ureq = { version = "3", optional = true }
sha2 = "0.11.0"
md5 = "0.8"
aes = "0.9.1"
cbc = { version = "0.2.1", features = ["alloc"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.4", features = ["wasm_js"] }

[features]
default = []
proxy = ["dep:tokio", "dep:axum", "dep:reqwest", "dep:futures", "dep:bytes"]
ner = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:ureq", "ner-lite"]
ner-lite = []
image = ["dep:image_crate", "dep:leptess"]
pdf = ["dep:lopdf"]
xlsx = ["dep:calamine"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
tempfile = "3"
