[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anon-pii"
version = "0.1.0"
description = "CLI tool to anonymize PII in debug data before sharing with AI tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Damien Chedan" }
]
keywords = ["pii", "anonymization", "privacy", "cli", "presidio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
anon = "anon.cli:app"

[project.urls]
Homepage = "https://github.com/damienchedan/anon-pii"
Repository = "https://github.com/damienchedan/anon-pii"

[tool.hatch.build.targets.wheel]
packages = ["src/anon"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
